--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -96,28 +97,37 @@
 
   <footer>
     <div class="iconmercado">
-      <img src="./imagens/index/mercadoiconfooter.png" alt="">
+      <img src="./imagens/index/mercadoiconfooter.png" alt="Logo do Mercado">
     </div>
     <div class="iconsfooter">
-      <img src="./imagens/index/iconfooter1.png" alt="">
-      <img src="./imagens/index/iconfooter2.png" alt="">
-      <img src="./imagens/index/iconfooter3.png" alt="">
-      <img src="./imagens/index/iconfooter4.png" alt="">
+      <i class="fa-solid fa-circle-check"></i>
+      <i class="fa-solid fa-money-check-dollar"></i>
+      <i class="fa-solid fa-headset"></i>
+      <i class="fa-solid fa-truck-fast"></i>
     </div>
     <div class="descricaofooter">
       <div class="localidade">
         <h3>Localidade:</h3>
-        <p>Rua Machado de Assis, 12122 <br> Buritama - sp </p>
+        <p>Rua Machado de Assis, 12122 <br> Buritama - SP</p>
       </div>
       <div class="funcionamento">
         <h3>Funcionamento:</h3>
-        <p>Segunda a sabado das 6:00 até 20:00 e ao domigo das 6:00 até às 13:00</p>
+        <p>Segunda a Sábado: 6:00 - 20:00 <br> Domingo: 6:00 - 13:00</p>
       </div>
       <div class="contato">
         <h3>Contato:</h3>
-        <p><img src="./imagens/index/whatsappiconfooter.png" alt=""><a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA">(18) 3691-2917</a></p>
-        <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a></p>
-        <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a></p>
+        <p>
+          <i class="fa-brands fa-whatsapp"></i>
+          <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank">(18) 3691-2917</a>
+        </p>
+        <p>
+          <i class="fa-brands fa-instagram"></i>
+          <a href="https://www.instagram.com/sm_saocarlos/" target="_blank">@sm_saocarlos</a>
+        </p>
+        <p>
+          <i class="fa-brands fa-facebook"></i>
+          <a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR" target="_blank">Supermercado São Carlos</a>
+        </p>
       </div>
     </div>
   </footer>
