--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -78,19 +79,19 @@
     <div class="quadrados-container">
       <div class="quadrados">
         <div class="quadrado">
-          <img src="./imagens/index/image1.png" alt="Qualidade">
+          <i class="fa-solid fa-circle-check"></i>
           <p class="titulo-quadrado">Qualidade</p>
         </div>
         <div class="quadrado">
-          <img src="./imagens/index/image2.png" alt="Preço Justo">
+          <i class="fa-solid fa-money-check-dollar"></i>
           <p class="titulo-quadrado">Preço justo</p>
         </div>
         <div class="quadrado">
-          <img src="./imagens/index/image3.png" alt="Bom Atendimento">
+          <i class="fa-solid fa-headset"></i>
           <p class="titulo-quadrado">Bom atendimento</p>
         </div>
         <div class="quadrado">
-          <img src="./imagens/index/image4.png" alt="Entregas">
+          <i class="fa-solid fa-truck-fast"></i>
           <p class="titulo-quadrado">Entregas</p>
         </div>
       </div>
@@ -121,8 +122,8 @@
 
     <div class="encomendas">
       <h2>Encomende suas compras</h2>
-      <p>Levaremos até você <img src="./imagens/index/image4.png" alt=""></p>
-      <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/160/160200.png" alt="imgzap">Encomendar</a>
+      <p>Levaremos até você <i class="fa-solid fa-truck-fast fa-2xl"></i></p>
+      <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i>Encomendar</a>
     </div>
 
     <div class="conhecamercado">
@@ -190,10 +191,10 @@
       <img src="./imagens/index/mercadoiconfooter.png" alt="Logo do Mercado">
     </div>
     <div class="iconsfooter">
-      <img src="./imagens/index/iconfooter1.png" alt="Ícone 1">
-      <img src="./imagens/index/iconfooter2.png" alt="Ícone 2">
-      <img src="./imagens/index/iconfooter3.png" alt="Ícone 3">
-      <img src="./imagens/index/iconfooter4.png" alt="Ícone 4">
+      <i class="fa-solid fa-circle-check"></i>
+      <i class="fa-solid fa-money-check-dollar"></i>
+      <i class="fa-solid fa-headset"></i>
+      <i class="fa-solid fa-truck-fast"></i>
     </div>
     <div class="descricaofooter">
       <div class="localidade">
@@ -207,15 +208,15 @@
       <div class="contato">
         <h3>Contato:</h3>
         <p>
-          <img src="./imagens/index/whatsappiconfooter.png" alt="WhatsApp">
+          <i class="fa-brands fa-whatsapp"></i>
           <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank">(18) 3691-2917</a>
         </p>
         <p>
-          <img src="./imagens/index/instagramiconfooter.png" alt="Instagram">
+          <i class="fa-brands fa-instagram"></i>
           <a href="https://www.instagram.com/sm_saocarlos/" target="_blank">@sm_saocarlos</a>
         </p>
         <p>
-          <img src="./imagens/index/facebookiconfooter.png" alt="Facebook">
+          <i class="fa-brands fa-facebook"></i>
           <a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR" target="_blank">Supermercado São Carlos</a>
         </p>
       </div>
