pagina ofertas e header responsivo

--- a/contato.html
+++ b/contato.html
@@ -52,8 +52,8 @@
 
       <!-- Direita: Formulário -->
       <form action="" method="GET" autocomplete="on">
-        <input type="text" placeholder="Seu nome completo">
-        <input type="email" placeholder="Seu endereço de email">
+        <input type="text" placeholder="Seu nome completo" required>
+        <input type="email" placeholder="Seu endereço de email" required>
         <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
         <input type="submit" value="Enviar">
       </form>
