--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 
 <body>
   <header>
-    <div>
-      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
-      <h1>Supermercado São Carlos</h1>
-    </div>
     <nav>
-      <ul>
+      <div class="imagem-texto">
+        <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+        <h1>Supermercado São Carlos</h1>
+      </div>
+      <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+      <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
@@ -31,8 +36,6 @@
       </ul>
     </nav>
   </header>
-
-
 
   <main>
     <div class="slider">
@@ -119,6 +122,7 @@
         <img class="enlarged-img" src="" alt="Imagem Ampliada">
       </div>
     </div>
+    <div class="ofertasbotao"><a href="./ofertas.html">Ver mais ofertas</a></div>
 
     <div class="encomendas">
       <h2>Encomende suas compras</h2>
@@ -228,5 +232,6 @@
 <script src="./script/slider.js"></script>
 <script src="./script/ofertasdia.js"></script>
 <script src="./script/cadastro.js"></script>
+<script src="./script/header.js"></script>
 
 </html>
