responsividade em alguns pontos

--- a/contato.html
+++ b/contato.html
@@ -17,12 +17,19 @@
 
 <body>
   <header>
-    <div>
-      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
-      <h1>Supermercado São Carlos</h1>
-    </div>
     <nav>
-      <ul>
+      <div class="imagem-texto">
+        <a class="icontext" href="index.html"><img src="./imagens/index/logo.png" alt="Ícone Mercado"></a>
+        <a class="icontext" href="index.html">
+          <h1>Supermercado São Carlos</h1>
+        </a>
+      </div>
+      <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+      <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
@@ -112,5 +119,6 @@
     </div>
   </footer>
 </body>
+<script src="script/header.js"></script>
 
 </html>
