--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <header>
     <nav>
       <div class="imagem-texto">
-        <img src="./imagens/index/logo.png" alt="Ícone Mercado">
-        <h1>Supermercado São Carlos</h1>
+        <a class="icontext" href="index.html"><img src="./imagens/index/logo.png" alt="Ícone Mercado"></a>
+        <a class="icontext" href="index.html">
+          <h1>Supermercado São Carlos</h1>
+        </a>
       </div>
       <div class="mobile-menu">
         <div class="line1"></div>
@@ -48,16 +50,16 @@
         <!--Fim Radio buttons-->
         <!--Slides imagens-->
         <div class="slide first">
-          <img src="" alt="img1">
+          <img src="./imagens/teste.jpg" alt="img1">
         </div>
         <div class="slide">
-          <img src="" alt="img2">
+          <img src="./imagens/teste.jpg" alt="img2">
         </div>
         <div class="slide">
-          <img src="" alt="img3">
+          <img src="./imagens/teste.jpg" alt="img3">
         </div>
         <div class="slide">
-          <img src="" alt="img4">
+          <img src="./imagens/teste.jpg" alt="img4">
         </div>
         <!--Fim slides imagens-->
         <!--Navigation auto-->
@@ -86,16 +88,22 @@
           <p class="titulo-quadrado">Qualidade</p>
         </div>
         <div class="quadrado">
-          <i class="fa-solid fa-money-check-dollar"></i>
-          <p class="titulo-quadrado">Preço justo</p>
+          <a href="ofertas.html">
+            <i class="fa-solid fa-money-check-dollar"></i>
+            <p class="titulo-quadrado">Preço justo</p>
+          </a>
         </div>
         <div class="quadrado">
-          <i class="fa-solid fa-headset"></i>
-          <p class="titulo-quadrado">Bom atendimento</p>
+          <a href="contato.html">
+            <i class="fa-solid fa-headset"></i>
+            <p class="titulo-quadrado">Bom atendimento</p>
+          </a>
         </div>
         <div class="quadrado">
-          <i class="fa-solid fa-truck-fast"></i>
-          <p class="titulo-quadrado">Entregas</p>
+          <a href="#quadradoencomenda">
+            <i class="fa-solid fa-truck-fast"></i>
+            <p class="titulo-quadrado">Entregas</p>
+          </a>
         </div>
       </div>
     </div>
@@ -124,7 +132,7 @@
     </div>
     <div class="ofertasbotao"><a href="./ofertas.html">Ver mais ofertas</a></div>
 
-    <div class="encomendas">
+    <div class="encomendas" id="quadradoencomenda">
       <h2>Encomende suas compras</h2>
       <p>Levaremos até você <i class="fa-solid fa-truck-fast fa-2xl"></i></p>
       <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank"><i class="fa-brands fa-whatsapp fa-2xl"></i>Encomendar</a>
