--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -17,12 +17,19 @@
 
 <body>
   <header>
-    <div>
-      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
-      <h1>Supermercado São Carlos</h1>
-    </div>
     <nav>
-      <ul>
+      <div class="imagem-texto">
+        <a class="icontext" href="index.html"><img src="./imagens/index/logo.png" alt="Ícone Mercado"></a>
+        <a class="icontext" href="index.html">
+          <h1>Supermercado São Carlos</h1>
+        </a>
+      </div>
+      <div class="mobile-menu">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+      <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
@@ -40,10 +47,10 @@
       </section>
       <section>
         <p>O Supermercado São Carlos, fundado em 10 de maio de 1979, é um verdadeiro marco em Buritama, São Paulo. Com mais de 40 anos de história, temos o orgulho de ser uma referência na cidade, oferecendo aos nossos clientes uma experiência de compras completa e satisfatória. Desde a nossa inauguração, nossa missão tem sido sempre a mesma: proporcionar produtos de qualidade com variedade e preços acessíveis, em um ambiente seguro e acolhedor. </p>
-        <img src="./imagens/historia/historia2.png" alt="">
+        <img src="./imagens/historia/imagemcorredor.jpg" class="corredor" alt="">
       </section>
       <section>
-        <img src="./imagens/historia/historia3.png" alt="">
+        <img src="./imagens/historia/imagemcongelados.jpg" class="congelados" alt="">
         <p>O Supermercado São Carlos é muito mais do que um simples lugar para fazer compras; somos parte da comunidade e trabalhamos todos os dias para garantir que nossos clientes encontrem tudo o que precisam com qualidade e confiança. Estamos aqui para continuar sendo o seu supermercado de confiança, proporcionando a melhor experiência de compra para você e sua família.</p>
       </section>
     </article>
@@ -85,5 +92,6 @@
     </div>
   </footer>
 </body>
+<script src="script/header.js"></script>
 
 </html>
