--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
         <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
-        <li><a href="./contato.html">Contato</a></li>
+        <li><a href="./contato.html" class="active">Contato</a></li>
       </ul>
     </nav>
   </header>
