--- a/ofertas.html
+++ b/ofertas.html
@@ -32,7 +32,7 @@
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
-        <li><a href="./ofertas.html">Ofertas</a></li>
+        <li><a href="./ofertas.html" class="active">Ofertas</a></li>
         <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
         <li><a href="./contato.html">Contato</a></li>
       </ul>
