--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  
   <header>
     <nav>
       <div class="imagem-texto">
@@ -33,11 +34,12 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
-        <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
+        <li><a href="./trabalheconosco.html" class="active">Trabalhe conosco</a></li>
         <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
     <h1>Trabalhe Conosco</h1>
     <div class="formulario">
