--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="line3"></div>
       </div>
       <ul class="nav-list">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html" class="active">Home</a></li>
         <li><a href="./nossahistoria.html">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
         <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
