--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quem somos</title>
   <link rel="shortcut icon" href="./imagens/index/favicon-32x32.png" type="image/x-icon">
-  <link rel="stylesheet" href="./style/historia.css">
-  <link rel="stylesheet" href="./style/header.css">
-  <link rel="stylesheet" href="./style/footer.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="style/header.css">
+  <link rel="stylesheet" href="style/footer.css">
+  <link rel="stylesheet" href="style/quem_somos.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <title>NossaHistória</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
@@ -31,30 +31,37 @@
       </div>
       <ul class="nav-list">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./nossahistoria.html">Nossa história</a></li>
+        <li><a href="./nossahistoria.html" class="active">Nossa história</a></li>
         <li><a href="./ofertas.html">Ofertas</a></li>
         <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
         <li><a href="./contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
-    <h1>Quem Somos</h1>
-    <article>
-      <section>
-        <img src="./imagens/historia/historia1.png" alt="">
-        <p>Ao longo das décadas, buscamos constantemente evoluir, adaptando-nos às necessidades de nossos clientes, mas sempre mantendo o compromisso com a excelência no atendimento. Acreditamos que um bom atendimento é fundamental, por isso nossa equipe é treinada para oferecer um serviço personalizado e eficiente, buscando atender às expectativas e necessidades de cada pessoa que visita nossa loja. </p>
-      </section>
-      <section>
-        <p>O Supermercado São Carlos, fundado em 10 de maio de 1979, é um verdadeiro marco em Buritama, São Paulo. Com mais de 40 anos de história, temos o orgulho de ser uma referência na cidade, oferecendo aos nossos clientes uma experiência de compras completa e satisfatória. Desde a nossa inauguração, nossa missão tem sido sempre a mesma: proporcionar produtos de qualidade com variedade e preços acessíveis, em um ambiente seguro e acolhedor. </p>
-        <img src="./imagens/historia/imagemcorredor.jpg" class="corredor" alt="">
-      </section>
-      <section>
-        <img src="./imagens/historia/imagemcongelados.jpg" class="congelados" alt="">
-        <p>O Supermercado São Carlos é muito mais do que um simples lugar para fazer compras; somos parte da comunidade e trabalhamos todos os dias para garantir que nossos clientes encontrem tudo o que precisam com qualidade e confiança. Estamos aqui para continuar sendo o seu supermercado de confiança, proporcionando a melhor experiência de compra para você e sua família.</p>
-      </section>
-    </article>
+    <div class="img-top">
+      <h2 class="titulo-quemsomos">Quem somos</h2>
+      <img class="img_top_somos" src="./imagens/historia/historia1.png" alt="">
+      <p class="paragrafo-quemsomos">O Supermercado São Carlos, fundado em 10 de maio de 1979, é um verdadeiro marco em Buritama, São Paulo. Com mais de 40 anos de história, temos o orgulho de ser uma referência na cidade, oferecendo aos nossos clientes uma experiência de compras completa e satisfatória. Desde a nossa inauguração, nossa missão tem sido sempre a mesma: proporcionar produtos de qualidade com variedade e preços acessíveis, em um ambiente seguro e acolhedor. </p>
+    </div>
+    <div class="div-grid">
+      <picture>
+        <source class="img_centro_somos" media="(max-width: 999px)" srcset="./imagens/historia/imagempães.jpg" type="image/jpg">
+        <img class="img_centro_somos" src="./imagens/historia/imagemcorredor.jpg" class="corredor" alt="">
+      </picture>
+      <p class="paragrafo-quemsomos">Ao longo das décadas, buscamos constantemente evoluir, adaptando-nos às necessidades de nossos clientes, mas sempre mantendo o compromisso com a excelência no atendimento. Acreditamos que um bom atendimento é fundamental, por isso nossa equipe é treinada para oferecer um serviço personalizado e eficiente, buscando atender às expectativas e necessidades de cada pessoa que visita nossa loja. </p>
+    </div>
+
+    <div class="bottomdiv">
+      <img class="img-final-somos" src="./imagens/historia/imagemcongelados.jpg" class="congelados" alt="">
+      <p class="paragrafo-quemsomos">O Supermercado São Carlos é muito mais do que um simples lugar para fazer compras; somos parte da comunidade e trabalhamos todos os dias para garantir que nossos clientes encontrem tudo o que precisam com qualidade e confiança. Estamos aqui para continuar sendo o seu supermercado de confiança, proporcionando a melhor experiência de compra para você e sua família.</p>
+    </div>
+
   </main>
+
+
+
   <footer>
     <div class="iconmercado">
       <img src="./imagens/index/mercadoiconfooter.png" alt="Logo do Mercado">
@@ -92,6 +99,5 @@
     </div>
   </footer>
 </body>
-<script src="script/header.js"></script>
 
 </html>
