--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <footer>
     <div class="iconmercado">
-      <img src="./imagens/index/mercadoiconfooter.png" alt="Logo do Mercado">
+      <img src="./imagens/index/logo.png" alt="Logo do Mercado">
     </div>
     <div class="iconsfooter">
       <i class="fa-solid fa-circle-check"></i>
