--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -61,7 +61,7 @@
           <input type="text" name="cep" id="cep" placeholder="00000-000" maxlength="9" required>
         </div>
         <div class="estado-cidade">
-          <div>
+          <div class="div-select-estado">
             <label for="estado">Estado: </label>
             <select id="estado" name="estado" required>
               <option value="">Selecione um estado</option>
@@ -106,7 +106,7 @@
 
   <footer>
     <div class="iconmercado">
-      <img src="./imagens/index/mercadoiconfooter.png" alt="Logo do Mercado">
+      <img src="./imagens/index/logo.png" alt="Logo do Mercado">
     </div>
     <div class="iconsfooter">
       <i class="fa-solid fa-circle-check"></i>
